Fixed footer overflow problem on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Montserrat Alternates", sans-serif;
+  
 }
 
 /* ------------------------special paddings/margins/text*/
@@ -17,6 +18,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow-x:hidden;
 }
 
 .row {
